--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <h1 class="header__title">
                 Резюме на должность разработчика на JavaScript
             </h1>
-        </div> 
+        </div>
+        <a class="header__link-download" href="#" target="_blank" title="Открыть pdf версию">
+            <svg class="header__link-svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/>
+            </svg>
+        </a>
     </header>
     <main class="main">
         <div class="container">
@@ -87,9 +92,9 @@
                                     GitHub Page
                                 </button>     
                             </a>
-                            <a class="noemi__link noemi__link--margin-top" href="https://github.com/AndrewVenko/bikecenter"  target="_blank">
+                            <a class="noemi__link noemi__link--margin-top noemi__link--margin-left" href="https://github.com/AndrewVenko/bikecenter"  target="_blank">
                                 <button class="noemi__btn noemi__btn--padding noemi__btn--hover">
-                                    GitHub репозиторий
+                                    GitHub Repo
                                 </button>  
                             </a>
                         </div>
@@ -102,9 +107,9 @@
                                     GitHub Page
                                 </button>     
                             </a>
-                            <a class="noemi__link noemi__link--margin-top" href="https://github.com/AndrewVenko/Diplom-work-noemi"  target="_blank">
+                            <a class="noemi__link noemi__link--margin-top noemi__link--margin-left" href="https://github.com/AndrewVenko/Diplom-work-noemi"  target="_blank">
                                 <button class="noemi__btn noemi__btn--padding noemi__btn--hover">
-                                    GitHub репозиторий
+                                    GitHub Repo
                                 </button>  
                             </a>
                         </div>
@@ -117,50 +122,50 @@
                 </h2>
                 <div class="my-sertificates__blocks">
                     <div class="layout my-sertificates__block">
-                        <object>
-                            <embed class="my-sertificates__embet" src="certificates/Sertificate-HTML.pdf" type="application/pdf">
+                        <object class="my-sertificate__object">
+                            <embed class="my-sertificate__embet" src="certificates/Sertificate-HTML.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-HTML.pdf" target="_blank">
+                        <a class="my-sertificate__link my-sertificate__link--hover" href="certificates/Sertificate-HTML.pdf" target="_blank">
                             HTML-верстка с нуля до первого макета
                         </a>
                     </div>
                     <div class="adaptive-layout my-sertificates__block">
-                        <object>
-                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Mobile.pdf" type="application/pdf">
+                        <object class="my-sertificate__object">
+                            <embed class="my-sertificate__embet" src="certificates/Sertificate-Mobile.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Mobile.pdf" target="_blank">
+                        <a class="my-sertificate__link my-sertificate__link--hover" href="certificates/Sertificate-Mobile.pdf" target="_blank">
                             Адаптивная и мобильная верстка
                         </a>
                     </div>
                     <div class="git my-sertificates__block">
-                        <object>
-                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Git.pdf" type="application/pdf">
+                        <object class="my-sertificate__object">
+                            <embed class="my-sertificate__embet" src="certificates/Sertificate-Git.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Git.pdf" target="_blank">
+                        <a class="my-sertificate__link my-sertificate__link--hover" href="certificates/Sertificate-Git.pdf" target="_blank">
                             Git
                         </a>
                     </div>
                     <div class="basics-JS my-sertificates__block">
-                        <object>
-                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Base_JavaScript.pdf" type="application/pdf">
+                        <object class="my-sertificate__object">
+                            <embed class="my-sertificate__embet" src="certificates/Sertificate-Base_JavaScript.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Base_JavaScript.pdf" target="_blank">
+                        <a class="my-sertificate__link my-sertificate__link--hover" href="certificates/Sertificate-Base_JavaScript.pdf" target="_blank">
                             Основы JavaScript
                         </a>
                     </div>
                     <div class="basics-JS-browser my-sertificates__block">
-                        <object>
-                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Base_JavaScript_Browser.pdf" type="application/pdf">
+                        <object class="my-sertificate__object">
+                            <embed class="my-sertificate__embet" src="certificates/Sertificate-Base_JavaScript_Browser.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Base_JavaScript_Browser.pdf" target="_blank">
+                        <a class="my-sertificate__link my-sertificate__link--hover" href="certificates/Sertificate-Base_JavaScript_Browser.pdf" target="_blank">
                             Основы JavaScript в браузере
                         </a>
                     </div>
                     <div class="advanced-JS my-sertificates__block">
-                        <object>
-                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Advanced_JavaScript.pdf" type="application/pdf">
+                        <object class="my-sertificate__object">
+                            <embed class="my-sertificate__embet" src="certificates/Sertificate-Advanced_JavaScript.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Advanced_JavaScript.pdf" target="_blank">
+                        <a class="my-sertificate__link my-sertificate__link--hover" href="certificates/Sertificate-Advanced_JavaScript.pdf" target="_blank">
                             Продвинутый JS современные возможности
                         </a>
                     </div>
