fixed mobile vergion

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         CSS (Flex, Grid, Transform, SVG, custom property)
                     </li>
                     <li class="my-skills__item my-skills__item--margin-top">
+                        Умение весртать с макетов Adobe Photoshop, Figma
+                    </li>
+                    <li class="my-skills__item my-skills__item--margin-top">
                         JavaScript (WebPack, Jest, Babel, Eslint, знание новых возможностей языка)
                     </li>
                     <li class="my-skills__item my-skills__item--margin-top">
