add noemi repair

--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
                             </a>
                         </div>
                     </div>
+                    <div class="repair noemi--padding">
+                        <iframe class="noemi__iframe" src="https://andrewvenko.github.io/page_Repair/"  scrolling="auto"></iframe>
+                        <div class="noemi__blok-link noemi__blok-link--margin-top">
+                            <a class="noemi__link noemi__link--margin-top"  href="https://andrewvenko.github.io/page_Repair/"  target="_blank">
+                                <button class="noemi__btn noemi__btn--padding noemi__btn--hover">
+                                    GitHub Page
+                                </button>     
+                            </a>
+                            <a class="noemi__link noemi__link--margin-top noemi__link--margin-left" href="https://github.com/AndrewVenko/page_Repair"  target="_blank">
+                                <button class="noemi__btn noemi__btn--padding noemi__btn--hover">
+                                    GitHub Repo
+                                </button>  
+                            </a>
+                        </div>
+                    </div>
                     <div class="netology noemi--padding">
                         <iframe class="noemi__iframe" src="https://andrewvenko.github.io/Diplom-work-noemi/"  scrolling="auto"></iframe>
                         <div class="noemi__blok-link noemi__blok-link--margin-top">
